2023-05-22  Sebastian Schmidt  <schmidt@lone-star.de>

	[ Post-QuantLib 1.30 updates ]
	* src/ql/time/calendars/hongkong.cpp: Updated
	* src/ql/time/calendars/india.cpp: Idem
	* src/ql/time/calendars/india.hpp: Idem
	* src/ql/time/calendars/singapore.cpp: Idem
	* src/ql/time/calendars/southkorea.cpp: Idem

2023-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

2023-04-20  Dirk Eddelbuettel  <edd@debian.org>

	* demo/allUScalendars.R (makeHol): Fix teeny bug

2023-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.5

	* demo/allUScalendars.R: Some additional polishing

2023-04-15  Dirk Eddelbuettel  <edd@debian.org>

	* demo/allUScalendars.R: New demo showing all holidays for all US
	calendars in one year

2023-04-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/calendars.cpp: Add support for ASX in Australia
	* R/calendars.R: Idem

	[ Several changes from QuantLib 1.30 ]
	* src/ql/time/calendars/australia.cpp: Add ASX calendar
	* src/ql/time/calendars/australia.hpp: Idem
	* src/ql/time/calendars/denmark.cpp: Add several missing holidays
	* src/ql/time/calendars/denmark.hpp: Idem
	* src/ql/time/calendars/newzealand.cpp: Add Matariki holiday
	* src/ql/time/calendars/newzealand.hpp: Idem
	* src/ql/time/calendars/turkey.cpp: Fix for 2019 and 2023 period
	* src/ql/time/calendars/turkey.hpp: Fix for 2019 and 2023 period
	* src/ql/time/calendars/unitedstates.cpp: Add Good Friday 2023

2023-01-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

2023-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/unitedkingdom.cpp: Add King Charles III
	Corononation Bank Holiday
	* src/ql/time/calendars/unitedkingdom.hpp: Updated
	* src/ql/time/calendars/australia.cpp: Queen Elizabeth Day of Morning